<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<!-- https://repository.jboss.org/nexus/content/groups/public/org/jboss/tools/parent/ -->
		<groupId>org.jboss.tools</groupId>
		<artifactId>parent</artifactId>
		<version>4.11.0.Final-SNAPSHOT</version>
	</parent>
	<groupId>org.jboss.tools</groupId>
	<artifactId>integration-stack-tests</artifactId>
	<version>4.11.0-SNAPSHOT</version>
	<name>integration-stack-tests.all</name>
	<packaging>pom</packaging>
	<properties>
		<tycho.scmUrl>scm:git:https://github.com/jbosstools/jbosstools-integration-stack-tests.git</tycho.scmUrl>
		<jbosstools.url>http://download.jboss.org/jbosstools</jbosstools.url>
		<jbtis.tp.version>4.11.0.Final</jbtis.tp.version>
		<jbtis.repo>staging</jbtis.repo>
		<orbit.site>${jbosstools.url}/updates/requirements/orbit/S20180504181223/</orbit.site>
		<skipRequirements>${skipTests}</skipRequirements>
		<!-- Get rid of the enforcer rule -->
		<BUILD_ALIAS>CI</BUILD_ALIAS>
	</properties>
	<modules>
		<module>plugins</module>
		<module>tests</module>
		<module>site</module>
	</modules>
	<repositories>
		<!--JBTIS Repository-->
		<repository>
			<id>jbtis-46-staging</id>
			<url>${jbosstools.url}/photon/staging/updates/integration-stack/</url>
			<layout>p2</layout>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<!-- Eclipse Orbit Update Site -->
		<repository>
			<id>orbit-site</id>
			<url>${orbit.site}</url>
			<layout>p2</layout>
		</repository>
		<!-- JBoss Nexus -->
		<repository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Repository Group</name>
			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
		</repository>
	</repositories>
	<build>
		<plugins>
			<!-- JBTIS Target Platform -->
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tychoVersion}</version>
				<configuration>
					<target>
						<artifact>
							<groupId>org.jboss.tools.integration-stack</groupId>
							<artifactId>target-platform</artifactId>
							<version>${jbtis.tp.version}</version>
							<type>target</type>
							<classifier>base</classifier>
						</artifact>
					</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tychoVersion}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>staging</id>
			<properties>
				<jbtis.repo>staging</jbtis.repo>
			</properties>
		</profile>
		<profile>
			<id>stable</id>
			<properties>
				<jbtis.repo>stable</jbtis.repo>
			</properties>
		</profile>
    <profile>
      <id>jdk9-build</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <argLine>--add-modules java.xml.bind --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <dependencies>
				<dependency>
					<groupId>javax.annotation</groupId>
					<artifactId>javax.annotation-api</artifactId>
					<version>1.3.1</version>
				</dependency>
				<dependency>
					<groupId>javax.xml.ws</groupId>
					<artifactId>jaxws-api</artifactId>
					<version>2.3.0</version>
					<exclusions>
						<exclusion>
							<groupId>javax.xml.bind</groupId>
							<artifactId>jaxb-api</artifactId>
						</exclusion>
					</exclusions>
				</dependency>
				<dependency>
					<groupId>jakarta.xml.bind</groupId>
					<artifactId>jakarta.xml.bind-api</artifactId>
					<version>2.3.2</version>
				</dependency>
				<dependency>
					<groupId>com.sun.activation</groupId>
					<artifactId>javax.activation</artifactId>
					<version>1.2.0</version>
				</dependency>
				<dependency>
					<groupId>org.apache.geronimo.specs</groupId>
					<artifactId>geronimo-ws-metadata_2.0_spec</artifactId>
					<version>1.1.3</version>
				</dependency>
				<dependency>
					<groupId>com.sun.xml.messaging.saaj</groupId>
					<artifactId>saaj-impl</artifactId>
					<version>1.4.0-b03</version>
				</dependency>
				<dependency>
					<groupId>org.apache.geronimo.specs</groupId>
					<artifactId>geronimo-jta_1.1_spec</artifactId>
					<version>1.1.1</version>
				</dependency>
				<dependency>
					<groupId>org.jboss.spec.javax.rmi</groupId>
					<artifactId>jboss-rmi-api_1.0_spec</artifactId>
					<version>1.0.6.Final</version>
				</dependency>
			</dependencies>
    </profile>
	</profiles>
</project>
